alignment issues

--- a/src/components/cards/bar-chart/BarChartInfo.scss
+++ b/src/components/cards/bar-chart/BarChartInfo.scss
@@ -23,6 +23,9 @@
   }
 
   .sample-data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     h2 {
       margin-bottom: 10px;
